# interview-tasks

./: .gitignore  README.md
can-typestate/src/: lib.rs
memory-allocator/: CMakeLists.txt  README.md
memory-allocator/cmake/: include_directories.cmake  source_files.cmake
memory-allocator/src/: main.c
memory-allocator/src/allocator/: allocator.c  allocator.h
memory-allocator/tests/: CMakeLists.txt  test_allocator.c  test_allocator_runner.c
memory-allocator/tests/allocator/: CMakeLists.txt  test_allocator.c  test_allocator_runner.c
protected-smart-pointer/: Cargo.toml  README.md
protected-smart-pointer/src/: lib.rs
template/: CMakeLists.txt  README.md
template/cmake/: source_files.cmake
template/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
typestate-programming/: Cargo.toml  README.md
typestate-programming/src/: lib.rs
